module navigation fill animation

--- a/raon-control/main-legacy.html
+++ b/raon-control/main-legacy.html
@@ -188,7 +188,7 @@
     <div class="body" style="width:1920px; height:780px; display:flex; margin:auto;">
         <div class="body-left" style="width:600px; height:780px; background-color: MediumSeaGreen;">
             <div class="contens_1x1">
-                <canvas id="chart1" widht="100x" height="200px" style="transform: translate(0%, 15%);"></canvas>
+                <canvas id="chart1" widht="100x" height="200px" style="transform: translate(0%, 15%); background-color: thistle;"></canvas>
                 <div class="doughnu-chart-text">Storage1</div>
             </div>
             <div class="contens_1x1">
