--- a/raon-control/main.html
+++ b/raon-control/main.html
@@ -356,7 +356,12 @@
                 <div class="grid-item"
                     style="display:flex; width:620px; height:160px; grid-column: 1/3; grid-row: 1/2;">
                     <div style="width: 100%; height: 100%;">
-                        <canvas id="chart1" width="200px" height="110px" style="position:relative; top:5px;"></canvas>
+                        <div class="doughnut-contain" style="left:30px; top:10px">
+                            <svg style="fill:none">
+                                <circle class="doughnutBackground" cx="50" cy="50" r="50" />
+                                <circle class="doughnutForeground" cx="50" cy="50" r="50" />
+                            </svg>
+                        </div>
                         <div class="data-name"
                             style="position: relative; top: 10px; width: 100%; height: 30px; text-align: center;">
                             Storage1</div>
