--- a/raon-control/main.html
+++ b/raon-control/main.html
@@ -355,6 +355,21 @@
             <div class="body-left-grid">
                 <div class="grid-item"
                     style="display:flex; width:620px; height:160px; grid-column: 1/3; grid-row: 1/2;">
+                    <svg width="622" height="162" style="position: absolute; top:-1px; left:-1px;">
+                        <defs>
+                            <style>
+                                .boxEdgeStyle {
+                                    fill: none;
+                                    stroke: #ccc;
+                                    stroke-miterlimit: 10;
+                                }
+                            </style>
+                        </defs>
+                        <polyline class="boxEdgeStyle" points="10.5 0.5 0.5 0.5 0.5 10.5" /> 
+                        <polyline class="boxEdgeStyle" points="621.5 10.5 621.5 0.5 611.5 0.5" />
+                        <polyline class="boxEdgeStyle" points="611.5 161.5 621.5 161.5 621.5 151.5" />
+                        <polyline class="boxEdgeStyle" points="0.5 151.5 0.5 161.5 10.5 161.5" />
+                    </svg>
                     <div style="width: 100%; height: 100%;">
                         <div class="doughnut-contain" style="left:30px; top:10px">
                             <svg style="fill:none">
@@ -364,7 +379,8 @@
                         </div>
                         <div class="data-name"
                             style="position: relative; top: 10px; width: 100%; height: 30px; text-align: center;">
-                            Storage1</div>
+                            Storage1
+                        </div>
                     </div>
 
                     <div style="width: 100%; height: 100%;">
@@ -464,8 +480,9 @@
         <div class="body-right" style="width:660px; height:780px;">
             <div class="body-right-grid">
                 <div class="grid-item" style="width:620px; height:160px; grid-column: 1/3; grid-row: 1/2;">
+
                 </div>
-                <div class="grid-item" style="display:flex; width:300px; height:160px; position: relative;">
+                <div class="grid-item" style="display:flex; width:300px; height:160px;">
                     <div style="width:70%; height:100%">
                         <div class="data-name" style="position: relative; left: 25px; top:25px">Power</div>
                         <div class="data-value" style="position: relative; left: 25px; top:40px">3000 KV</div>
@@ -474,15 +491,22 @@
                         <div class="lightning-contain">
                             <span class="tooltiptext">Voltage</span>
                             <svg class="lightning" width="59.63" height="103.33">
-                                <polygon
+                                <defs>
+                                    <linearGradient id="left-to-right" x1="29" y1="100" x2="29"
+                                        gradientUnits="userSpaceOnUse">
+                                        <stop offset="0" stop-color="#2959a8">
+                                            <animate dur="1s" attributeName="offset" fill="freeze" from="0" to="0.5"
+                                                keySplines=" 0.0 0.4 0.1 1" keyTimes="0;1" calcMode="spline" />
+                                        </stop>
+                                        <stop offset="0" stop-color="#2959a8" stop-opacity="0.1">
+                                            <animate dur="1s" attributeName="offset" fill="freeze" from="0" to="0.5"
+                                                keySplines=" 0.0 0.4 0.1 1" keyTimes="0;1" calcMode="spline" />
+                                        </stop>
+                                    </linearGradient>
+                                </defs>
+                                <polygon fill="url(#left-to-right)"
                                     points="58.67 0.5 18.67 0.5 6.67 40.5 0.67 60.5 16.67 60.5 4.67 100.5 32.67 60.5 46.67 40.5 30.67 40.5 58.67 0.5"
-                                    style="fill:#2959a8;stroke:#1e417d;stroke-miterlimit:10" />
-                            </svg>
-                            <div class="lightning-split"></div>
-                            <svg class="lightning" width="59.63" height="103.33">
-                                <polygon
-                                    points="58.67 0.5 18.67 0.5 6.67 40.5 0.67 60.5 16.67 60.5 4.67 100.5 32.67 60.5 46.67 40.5 30.67 40.5 58.67 0.5"
-                                    style="fill:none;stroke:#1e417d;stroke-miterlimit:10" />
+                                    style="stroke:none;stroke-miterlimit:10" />
                             </svg>
                         </div>
 
