--- a/raon-control/main.html
+++ b/raon-control/main.html
@@ -365,16 +365,18 @@
                                 }
                             </style>
                         </defs>
-                        <polyline class="boxEdgeStyle" points="10.5 0.5 0.5 0.5 0.5 10.5" /> 
+                        <polyline class="boxEdgeStyle" points="10.5 0.5 0.5 0.5 0.5 10.5" />
                         <polyline class="boxEdgeStyle" points="621.5 10.5 621.5 0.5 611.5 0.5" />
                         <polyline class="boxEdgeStyle" points="611.5 161.5 621.5 161.5 621.5 151.5" />
                         <polyline class="boxEdgeStyle" points="0.5 151.5 0.5 161.5 10.5 161.5" />
                     </svg>
-                    <div style="width: 100%; height: 100%;">
-                        <div class="doughnut-contain" style="left:30px; top:10px">
+                    <div style="width: 100%; height: 100%; position: relative;">
+                        <div class="doughnutChartText">80%</div>
+                        <div class="doughnut-contain" style="left:50px; top:10px">
                             <svg style="fill:none">
                                 <circle class="doughnutBackground" cx="50" cy="50" r="50" />
-                                <circle class="doughnutForeground" cx="50" cy="50" r="50" />
+                                <circle class="doughnutForeground" cx="50" cy="50" r="50" stroke="#00ace6"
+                                    style="--chartValue:200" />
                             </svg>
                         </div>
                         <div class="data-name"
@@ -383,18 +385,34 @@
                         </div>
                     </div>
 
-                    <div style="width: 100%; height: 100%;">
-                        <canvas id="chart2" width="200px" height="110px" style="position:relative; top:5px;"></canvas>
+                    <div style="width: 100%; height: 100%; position: relative;">
+                        <div class="doughnutChartText">10%</div>
+                        <div class="doughnut-contain" style="left:50px; top:10px">
+                            <svg style="fill:none">
+                                <circle class="doughnutBackground" cx="50" cy="50" r="50" />
+                                <circle class="doughnutForeground" cx="50" cy="50" r="50" stroke="#00e639"
+                                    style="--chartValue:400" />
+                            </svg>
+                        </div>
                         <div class="data-name"
                             style="position: relative; top: 10px; width: 100%; height: 30px; text-align: center;">
-                            Storage1</div>
+                            Storage1
+                        </div>
                     </div>
 
-                    <div style="width: 100%; height: 100%;">
-                        <canvas id="chart3" width="200px" height="110px" style="position:relative; top:5px;"></canvas>
+                    <div style="width: 100%; height: 100%; position: relative;">
+                        <div class="doughnutChartText">60%</div>
+                        <div class="doughnut-contain" style="left:50px; top:10px">
+                            <svg style="fill:none">
+                                <circle class="doughnutBackground" cx="50" cy="50" r="50" />
+                                <circle class="doughnutForeground" cx="50" cy="50" r="50" stroke="#e60000"
+                                    style="--chartValue:250" />
+                            </svg>
+                        </div>
                         <div class="data-name"
                             style="position: relative; top: 10px; width: 100%; height: 30px; text-align: center;">
-                            Storage1</div>
+                            Storage1
+                        </div>
                     </div>
 
                 </div>
@@ -479,8 +497,23 @@
         <!-- Right -->
         <div class="body-right" style="width:660px; height:780px;">
             <div class="body-right-grid">
-                <div class="grid-item" style="width:620px; height:160px; grid-column: 1/3; grid-row: 1/2;">
-
+                <div class="grid-item"
+                    style="display:flex; width:620px; height:160px; grid-column: 1/3; grid-row: 1/2;">
+                    <svg width="622" height="162" style="position: absolute; top:-1px; left:-1px;">
+                        <defs>
+                            <style>
+                                .boxEdgeStyle {
+                                    fill: none;
+                                    stroke: #ccc;
+                                    stroke-miterlimit: 10;
+                                }
+                            </style>
+                        </defs>
+                        <polyline class="boxEdgeStyle" points="10.5 0.5 0.5 0.5 0.5 10.5" />
+                        <polyline class="boxEdgeStyle" points="621.5 10.5 621.5 0.5 611.5 0.5" />
+                        <polyline class="boxEdgeStyle" points="611.5 161.5 621.5 161.5 621.5 151.5" />
+                        <polyline class="boxEdgeStyle" points="0.5 151.5 0.5 161.5 10.5 161.5" />
+                    </svg>
                 </div>
                 <div class="grid-item" style="display:flex; width:300px; height:160px;">
                     <div style="width:70%; height:100%">
@@ -525,8 +558,8 @@
 
                 </div>
 
-                <div class="grid-item" style="width:620px; height:160px; grid-column: 1/3; grid-row: 4/5;">
-
+                <div class="grid-item" style="width:620px; height:200px; grid-column: 1/3; grid-row: 4/5;">
+                    <canvas id="canvas2" width="640px" height="200px"></canvas>
                 </div>
             </div>
         </div>
@@ -1740,7 +1773,16 @@
                     datasets: [{
                         label: details.label,
                         // backgroundColor: color(chartColors.blue).alpha(0.5).rgbString(),
-                        borderColor: details.color,
+                        // borderColor: details.color,
+                        borderColor: 'rgb(255, 99, 132)',
+                        fill: false,
+                        cubicInterpolationMode: 'monotone',
+                        data: [],
+                    }, {
+                        label: details.label,
+                        // backgroundColor: color(chartColors.blue).alpha(0.5).rgbString(),
+                        // borderColor: details.color,
+                        borderColor: 'rgb(54, 162, 235)',
                         fill: false,
                         cubicInterpolationMode: 'monotone',
                         data: [],
@@ -1850,7 +1892,7 @@
             // modulePosition();
             moduleNaviPositing();
             simulation();
-
+            
             var details = [
                 { label: "Line Chart1", color: window.chartColors.blue },
                 { label: "Line Chart2", color: window.chartColors.green },
@@ -1861,8 +1903,8 @@
             //var lineConfig1 = lineChartConfig(details[0])
             window.myChart = new Chart(ctx1, lineChartConfig(details[0]));
 
-            // var ctx2 = document.getElementById('canvas2').getContext('2d');
-            // window.myChart = new Chart(ctx2, lineChartConfig(details[1]));
+            var ctx2 = document.getElementById('canvas2').getContext('2d');
+            window.myChart = new Chart(ctx2, lineChartConfig(details[1]));
 
             // var ctx3 = document.getElementById('canvas3').getContext('2d');
             // // var lineConfig2 = lineChartConfig(datails2)
