moduel positing match module shadow

--- a/raon-control/main.html
+++ b/raon-control/main.html
@@ -1472,7 +1472,7 @@
     </div>
 
     <script>
-        var initPos = 90;
+        var initPos = 60; //This value must be same with moduelSVG left postion"
         var moduleWidth = 446;
         var moduleHeight = 680;
         var offset = moduleWidth / 2;
